# blogi

./: CMakeLists.txt  README.md  config.yaml
cmake/: FindBrotli.cmake  FindHiredis.cmake  FindOpenLDAP.cmake
data/: CMakeLists.txt
data/template/default/: index.html  mobile.html
data/template/default/public/: mstyle.css  reset.css  style.css
plugins/: CMakeLists.txt
plugins/content/: CMakeLists.txt  content.cpp
plugins/gameinfo/: CMakeLists.txt  gameinfo.cpp
plugins/media/: CMakeLists.txt  backend.h  icon.webp.h  media.cpp  redis.cpp  types.h
plugins/navbar/: CMakeLists.txt  navbar.cpp
plugins/nginxfiler/: CMakeLists.txt  filer.cpp
plugins/nodeinfo/: CMakeLists.txt  nodeinfo.cpp
plugins/nodeinfo/icons/: freebsd.h  tux.h
plugins/staticpage/: CMakeLists.txt  static.cpp  static.h
plugins/youtube/: CMakeLists.txt  youtube.cpp
src/: CMakeLists.txt  auth.cpp  auth.h  blogi.cpp  blogi.h  compress.h  conf.cpp  conf.h  database.cpp  database.h  editor.cpp  editor.h  plugin.cpp  plugin.h  session.cpp  session.h  settings.cpp  settings.h  theme.cpp  theme.h
src/database/: pgsql.cpp  sqlite.cpp
tests/: CMakeLists.txt
